# recursive

./: Cargo.toml
recursive-proc-macro-impl/: Cargo.toml
recursive-proc-macro-impl/src/: lib.rs
tests/: test.rs
