[package]
name = "recursive"
version = "0.1.1"
edition = "2021"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Easy recursion without stack overflows."
license = "MIT"
repository = "https://github.com/orlp/recursive"
readme = "README.md"

[dependencies]
recursive-proc-macro-impl = { version = "=0.1.1", path = "recursive-proc-macro-impl" }
stacker = "0.1"