[package]
name = "recursive-proc-macro-impl"
version = "0.1.1"
edition = "2021"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Procedural macros for the recursive crate."
license = "MIT"
repository = "https://github.com/orlp/recursive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
